# chalkboard

./: CMakeLists.txt  LICENSE  README.md
cmake/: chalkboardConfig.cmake.in
examples/: common.h  euler_identity.cpp  pythagorean.cpp  quadratic_formula.cpp
include/chalkboard/: latex_formatter.h  latex_list.h  latex_serializable.h  latex_table.h  publisher.h  report_object.h  reporter.h  task.h
src/: latex_list.cpp  latex_table.cpp  publisher.cpp  reporter.cpp  task.cpp  viewer.cpp
viewer/: viewer.cpp
